# estoque-facil

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: estoque.py
tests/: test_estoque.py
